--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -6,7 +6,6 @@ html, body { height: 100%; }
 
 body {
   margin: 0;
-  overflow-x: hidden;
   -webkit-font-smoothing: antialiased;
   text-rendering: geometricPrecision;
 }
